test/scc/ext/tm/semantic-errors/015.a
015.t:4:6: error: volatile objects cannot be used within _Transaction_safe function